# Waves2AMR

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindFFTW.cmake  Waves2AMRConfig.cmake.in
examples/iterative_wave_validation/: case3_HOS-NWT.inp  case4_HOS-NWT.inp  probe_2.inp  wavemaker.cfg
include/: CMakeLists.txt
src/: CMakeLists.txt  interp_to_mfab.cpp  interp_to_mfab.h  modes_hosgrid.cpp  modes_hosgrid.h  modes_hosgrid.tpp  read_ascii.cpp  read_modes.cpp  read_modes.h  read_modes.tpp
tests/: CMakeLists.txt  main_NWT_2D.cpp  main_NWT_3D.cpp  main_Ocean.cpp  test_modes_reading.cpp
tools/: FFT_smoothing.jl  functions.jl  functions_for_iterative_loop.py  main.jl  target_fourwave_decomp.py  target_nodecomp.py  target_wave_iterative_loop.py
unit_tests/: CMakeLists.txt  test_ascii.cpp  test_combined.cpp  test_combined_NWT.cpp  test_fftexamples.cpp  test_hosgrid.cpp  test_interp_to_mfab.cpp  test_readops.cpp
